--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
     "sass": "^1.26.7"
   },
   "name": "practice_2",
-  "description": "- Building a webpage with designed layout. ## TIMELINE - 5 days (2020/06/1 - 2020/06/5) ## TEAMSIZE - 1 dev. ## TARGET - Understand how to analyze design. - Apply HTML elements, CSS properties to build websites. - Get familiar with tools (Figma, Perfect Pixels). - Follow the CSS Naming convention. - Use Emmet to code HTML/CSS quickly. - Use SASS to write efficient, DRY, easy to maintain stylesheet. - Use Parcel to compile SASS to CSS. ## ENVIRONMENT - Ubuntu 18.04 LTS - Git ## TECHNOLOGIES - [HTML5](https://developer.mozilla.org/en-US/docs/Web/HTML): HTML (HyperText Markup Language) is the most basic building block of the Web. - [CSS3](https://developer.mozilla.org/en-US/docs/Web/CSS): Cascading Style Sheets (CSS) is a stylesheet language used to describe the presentation of a document written in HTML or XML (including XML dialects such as SVG, MathML or XHTML). - [SASS](https://sass-lang.com/) Sass is a preprocessor scripting language that is interpreted or compiled into Cascading Style Sheets (CSS). - [Parcel](https://parceljs.org/) ParcelJS is a web application bundler. Transpiling higher-level languages into HTML, CSS and JavaScript ## EDITOR - [VSCode](https://code.visualstudio.com/) ## DESIGN - [Figma design](https://www.figma.com/file/3NPM1Zv0H1Vw16rEmYdoJS/Hofmann-UI-Kit-Page-Templates-Copy?node-id=0%3A368) ## PLAN - [Plan](https://docs.google.com/document/d/1N4rUE0hkwvayGpNrGRrbJRf81lAZMOv9I-Ve7Qzrm0s/edit?usp=sharing) ## GUIDELINE - Clone project: `git clone https://github.com/hungtranpro2/html-css-training.git` - Open html-css-training folder: `cd html-css-training` - Checkout to feature/practice-two branch: `git checkout practice-2` - Install dependencies: `npm install` - Start parcel bundler: `npm start` - Open url `http://localhost:1234` in your browser ## Authors -",
+  "description": "- Building a webpage with designed layout.",
   "version": "1.0.0",
   "main": "index.js",
-  "dependencies": {},
+  "dependencies": {
+    "parcel-bundler": "^1.12.4"
+  },
   "scripts": {
     "start": "parcel index.html",
     "test": "echo \"Error: no test specified\" && exit 1"
