--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
   "description": "",
   "dependencies": {
     "parcel-bundler": "^1.12.4"
+  },
+  "devDependencies": {
+    "sass": "^1.26.8"
   }
 }
